--- a/src/components/scss/layout.scss
+++ b/src/components/scss/layout.scss
@@ -1,4 +1,4 @@
-@font-face {font-family: "Beaujolais";
+@font-face {font-family: Beaujolais;
     src: url("fonts/e1f5bed9447ec6ee5cfbd7e2cc762667.eot"); /* IE9*/
     src: url("fonts/e1f5bed9447ec6ee5cfbd7e2cc762667.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
     url("fonts/e1f5bed9447ec6ee5cfbd7e2cc762667.woff2") format("woff2"), /* chrome、firefox */
