--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -29,7 +29,7 @@
             visibility: visible;
         }
         h3{
-            font-family: 'Beaujolais';
+            font-family: Beaujolais;
             font-size: 2rem;
             margin:0;
             margin-top:-8px;
@@ -72,6 +72,7 @@
         position: fixed;
         height: 70px;
         padding: 10px;
+        margin-top:-70px;
         .navbar-brand{
             left:0;
             transform: translateX(15px);
@@ -117,5 +118,8 @@
                 }
             }
         }
+    }
+    &.fixed.visible{
+        margin-top:0;
     }
 }
