--- a/src/components/scss/layout.scss
+++ b/src/components/scss/layout.scss
@@ -7,6 +7,13 @@ body{
     .msg-error{
         color:#F00;
     }
+    .button-badge{
+        cursor:pointer;
+        margin-right:5px;
+        font-size:10px;
+        padding:0px 5px;
+        text-transform:lowercase;
+    }
 }
 .main-header{
     overflow: hidden;
