--- a/src/components/scss/index.scss
+++ b/src/components/scss/index.scss
@@ -9,4 +9,9 @@
         font-size: 1.5rem;
         word-break: break-all;
     }
+    a{
+        cursor: pointer;
+        color:#000;
+        text-decoration: none;
+    }
 }
