--- a/src/components/scss/hamburgerMenu.scss
+++ b/src/components/scss/hamburgerMenu.scss
@@ -32,6 +32,7 @@ $color: #b3e5fc;
 }
 
 .menu{
+    display: none;
     position: fixed;
     width: 46px;
     height: 46px;
@@ -109,5 +110,15 @@ $color: #b3e5fc;
         transform: rotateZ(45deg) scaleX(1.4) translate(-2px, -2px);
         }
     }
+    }
+    @media screen and (max-width: 767px) {
+        &{
+            display: block;
+        }
+    }
+    @media screen and (min-width: 768px) {
+        &.fixed{
+            display: block;
+        }
     }
 }
