--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -14,6 +14,13 @@
         left:50%;
         transform:translateX(-50%);
         transition: 1s;
+        a{
+            color:#000;
+            &:hover{
+                color:#000;
+                text-decoration: none;
+            }
+        }
         .imgHeader{
             z-index: 1;
             width:150px;
