--- a/src/components/scss/menuFullScreen.scss
+++ b/src/components/scss/menuFullScreen.scss
@@ -1,130 +1,289 @@
 /* The Overlay (background) */
-.overlay {
-  .overlay-bg{
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
-    height: 46px;
-    width: 46px;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    right: 10px;
-    top: 10px;
-    //transform:translate(-50%,-50%);
-    //transform: scale(0);
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.75s;
-    //border-bottom-left-radius: 75%;
-    border-radius: 50%;
-    background-color: #BBBBB5;
-  }
-  .overlay-content {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.3s linear;
-    transition-delay: 0.5s;
-    position: fixed;
-    z-index: 2;
-    top: 50%; 
-    left:50%;
-    transform:translate(-50%,-50%);
-    text-align: center; /* Centered text/links */
-    transition: 1s;
-    a {
-      padding: 10px;
-      font-weight: 700;
-      text-decoration: none;
-      font-size: 2rem;
-      color: transparent;
-      margin-top:-100px;
-      position: relative;
-      display: block;
-      overflow: hidden;
-      color:transparent;
-      transition:margin 0.5s, color 0.25s;
-      text-transform: uppercase;
+@media screen and (min-width: 768px) {
+  .overlay{
+    .overlay-content {
+      text-align: center;
+      a{
+        span{
+          color:#000;
+          display: inline-block;
+          padding: 10px 15px;
+          font-weight: bold;
+          position: relative;
+
+        }
+      }
     }
-    .overlay a:hover, .overlay a:focus {
-      color: #000;
-    }
+
   }
-  &.open{
+  .overlay.fixed {
     .overlay-bg{
-      transform: scale(70);
-      width:100%;
-      background-color: rgb(255,227,0); /* Black fallback color */
-      background-color: rgba(255,227,0, 0.9); /* Black w/opacity */
+      /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+      height: 46px;
+      width: 46px;
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      right: 10px;
+      top: 10px;
+      //transform:translate(-50%,-50%);
+      //transform: scale(0);
+      overflow-x: hidden; /* Disable horizontal scroll */
+      transition: 0.75s;
+      //border-bottom-left-radius: 75%;
+      border-radius: 50%;
+      background-color: #BBBBB5;
     }
     .overlay-content {
-      visibility: visible;
-      opacity: 1;
-      a{
-        color:#030303;
-        margin-top:0;
-        animation-duration: 1s;
-        animation-fill-mode: both;
-        span {
-          cursor: pointer;
-          display: block;
-          transition: transform 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
-        } 
-        &:after {
-          content: attr(data-link-alt);
-          display: inline;
-          position: absolute;
-          transition: top 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
-          top: 100%;
-          left: 0;
-          right: 0;
-          text-align: center; 
-        }
-        &:hover {
-          cursor: pointer;
-
-          span {
-            transform: translateY(-100%); 
-          }
-          
-          &:after {
-            top: 10px; 
-          }
-        }
-      }
-      
-      
-      /*
-      a:after {
-        background: none repeat scroll 0 0 transparent;
-        bottom: 0;
-        content: "";
+      visibility: hidden;
+      opacity: 0;
+      position: fixed;
+      z-index: 2;
+      top: 50%; 
+      left:50%;
+      transform:translate(-50%,-50%);
+      text-align: center; /* Centered text/links */
+      //transition: 1s;
+      transition: visibility 0s linear, opacity 0.3s linear 0.1s;
+      //transition-delay: 0.5s;
+      a {
+        padding: 10px;
+        font-weight: 700;
+        text-decoration: none;
+        font-size: 2rem;
+        color: transparent;
+        //margin-top:-100px;
+        position: relative;
         display: block;
-        height: 2px;
-        left: 50%;
-        position: absolute;
-        background: #030303;
-        transition: width 0.3s ease 0s, left 0.3s ease 0s;
-        width: 0;
+        overflow: hidden;
+        color:transparent;
+        transition:margin 0.5s, color 0.25s;
+        text-transform: uppercase;
+        span{
+          padding: 0;
+          display: inline;
+        }
       }
-      a:hover:after {
-        width: 100%;
-        left: 0;
-      }*/
+      .overlay a:hover, .overlay a:focus {
+        color: #000;
+      }
     }
-  }    
-}
+    &.open{
+      .overlay-bg{
+        transform: scale(70);
+        width:100%;
+        background-color: rgb(255,227,0); /* Black fallback color */
+        background-color: rgba(255,227,0, 0.9); /* Black w/opacity */
+      }
+      .overlay-content {
+        visibility: visible;
+        opacity: 1;
+        a{
+          color:#030303;
+          margin-top:0;
+          animation-duration: 1s;
+          animation-fill-mode: both;
+          span {
+            cursor: pointer;
+            display: block;
+            transition: transform 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+          } 
+          &:after {
+            content: attr(data-link-alt);
+            display: inline;
+            position: absolute;
+            transition: top 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+            top: 100%;
+            left: 0;
+            right: 0;
+            text-align: center; 
+          }
+          &:hover {
+            cursor: pointer;
 
-/* Position the close button (top right corner) */
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
+            span {
+              transform: translateY(-100%); 
+            }
+            
+            &:after {
+              top: 10px; 
+            }
+          }
+        }
+        
+        
+        /*
+        a:after {
+          background: none repeat scroll 0 0 transparent;
+          bottom: 0;
+          content: "";
+          display: block;
+          height: 2px;
+          left: 50%;
+          position: absolute;
+          background: #030303;
+          transition: width 0.3s ease 0s, left 0.3s ease 0s;
+          width: 0;
+        }
+        a:hover:after {
+          width: 100%;
+          left: 0;
+        }*/
+      }
+    }    
   }
+
+  /* Position the close button (top right corner) */
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .overlay{
+    .overlay-bg{
+      /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+      height: 46px;
+      width: 46px;
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      right: 10px;
+      top: 10px;
+      //transform:translate(-50%,-50%);
+      //transform: scale(0);
+      overflow-x: hidden; /* Disable horizontal scroll */
+      transition: 0.75s;
+      //border-bottom-left-radius: 75%;
+      border-radius: 50%;
+      background-color: #BBBBB5;
+    }
+    .overlay-content {
+      visibility: hidden;
+      opacity: 0;
+      position: fixed;
+      z-index: 2;
+      top: 50%; 
+      left:50%;
+      transform:translate(-50%,-50%);
+      text-align: center; /* Centered text/links */
+      //transition: 1s;
+      transition: visibility 0s linear, opacity 0.3s linear 0.1s;
+      //transition-delay: 0.5s;
+      a {
+        padding: 10px;
+        font-weight: 700;
+        text-decoration: none;
+        font-size: 2rem;
+        color: transparent;
+        //margin-top:-100px;
+        position: relative;
+        display: block;
+        overflow: hidden;
+        color:transparent;
+        transition:margin 0.5s, color 0.25s;
+        text-transform: uppercase;
+        span{
+          padding: 0;
+          display: inline;
+        }
+      }
+      .overlay a:hover, .overlay a:focus {
+        color: #000;
+      }
+    }
+    &.open{
+      .overlay-bg{
+        transform: scale(70);
+        width:100%;
+        background-color: rgb(255,227,0); /* Black fallback color */
+        background-color: rgba(255,227,0, 0.9); /* Black w/opacity */
+      }
+      .overlay-content {
+        visibility: visible;
+        opacity: 1;
+        a{
+          color:#030303;
+          margin-top:0;
+          animation-duration: 1s;
+          animation-fill-mode: both;
+          span {
+            cursor: pointer;
+            display: block;
+            transition: transform 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+          } 
+          &:after {
+            content: attr(data-link-alt);
+            display: inline;
+            position: absolute;
+            transition: top 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+            top: 100%;
+            left: 0;
+            right: 0;
+            text-align: center; 
+          }
+          &:hover {
+            cursor: pointer;
+
+            span {
+              transform: translateY(-100%); 
+            }
+            
+            &:after {
+              top: 10px; 
+            }
+          }
+        }
+        
+        
+        /*
+        a:after {
+          background: none repeat scroll 0 0 transparent;
+          bottom: 0;
+          content: "";
+          display: block;
+          height: 2px;
+          left: 50%;
+          position: absolute;
+          background: #030303;
+          transition: width 0.3s ease 0s, left 0.3s ease 0s;
+          width: 0;
+        }
+        a:hover:after {
+          width: 100%;
+          left: 0;
+        }*/
+      }
+    }    
+  }
+
+  /* Position the close button (top right corner) */
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+
 }
