--- a/src/componentes/header/scss/menu.scss
+++ b/src/componentes/header/scss/menu.scss
@@ -25,8 +25,14 @@
             &:hover::after {
                 width: 100%;
             }
-            &:last-of-type:hover::after{
-                width:0;
+        }
+        .link-social{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            a:nth-of-type(2){
+                padding-left:5px;
+                padding-right:5px;
             }
         }
         @media screen and (max-width: 991px) {
@@ -55,6 +61,13 @@
                 .nav-link{
                     font-size:2rem;
                     padding:5px 0;
+                }
+                .link-social{
+                    margin-top: 10px;
+                    a:nth-of-type(2){
+                        padding-left:10px;
+                        padding-right: 10px;
+                    }
                 }
             }
             &.open{
