--- a/src/componentes/header/scss/header.scss
+++ b/src/componentes/header/scss/header.scss
@@ -1,7 +1,8 @@
-.navbar{
+nav.navbar{
     position: relative;
     height: 130px;
     width: 100%;
+    justify-content: space-between;
     .navbar-brand{
         .imgHeader{
             width:70px;
